--- a/views/data.html
+++ b/views/data.html
@@ -4,7 +4,10 @@
     <title></title>
 </head>
 <body>
-    <h1>Test</h1>
-    <h2>{{ name }}</h2>
+
+    <h3>{{ name }}</h3>
+    <h3>{{ email }}</h3>
+    <h3>{{ date }}</h3>
+
 </body>
 </html>
